--- a/css/src/_variables.scss
+++ b/css/src/_variables.scss
@@ -1,5 +1,6 @@
-$colour-brown: #773f10;
-$colour-green: #0dee10;
+$colour-links: #0dee10;
+$colour-highlights: #ff13b6;
 
+$breakpoint-desktop: 1024px;
 
-$breakpoint-desktop : 1024px;
+$font-main: 'Merriweather', serif;
